deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: <MY_AWS_ECR_URL>/auth-service
        ports:
        - containerPort: 5000


# I left my ECR URL out of the code, enter your ECR URL in place of <MY_AWS_ECR_URL>
